# mandelbrot-set

./: CMakeLists.txt  README.md
src/: Mandelbrot.cpp  Mandelbrot.h  main.cpp
